# Salamander

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini  tutorial.ipynb
.github/workflows/: test.yaml
data/: COSMIC_v3.3.1_SBS_GRCh38.csv  COSMIC_v3.4_ID_GRCh37.txt  hrdetect_counts_training.csv  hrdetect_labels_training.csv  pcawg_breast_indel.csv  pcawg_breast_sbs.csv  pcawg_breast_sv.csv
src/salamander/: __init__.py  consts.py  plot.py  tools.py  utils.py
src/salamander/initialization/: initialize.py  methods.py
src/salamander/models/: __init__.py  _utils_corrnmf.py  _utils_klnmf.py  corrnmf.py  corrnmf_det.py  klnmf.py  mmcorrnmf.py  mvnmf.py  signature_nmf.py  standard_nmf.py
src/salamander/nmf_framework/: _utils_corrnmf.py  _utils_klnmf.py  corrnmf.py  corrnmf_det.py  initialization.py  klnmf.py  multimodal_corrnmf.py  mvnmf.py  nmf.py  signature_nmf.py  standard_nmf.py
tests/: test_corrnmf.py  test_initialization.py  test_klnmf.py  test_mmcorrnmf.py  test_multimodal_corrnmf.py  test_mvnmf.py  test_plot.py  test_utils.py  test_utils_klnmf.py
tests/test_data/initialization/: data_mat.npy  exposures_mat_flat.npy  exposures_mat_nndsvd_seed1.npy  exposures_mat_nndsvda_seed1.npy  exposures_mat_random_seed1.npy  signatures_mat_nndsvd_seed1.npy  signatures_mat_random_seed1.npy  signatures_mat_separableNMF_seed1.npy
tests/test_data/models/corrnmf/: aux_nsigs1_dim1.npy  aux_nsigs2_dim2.npy  counts.csv  objective_init_nsigs1_dim1.npy  sample_scalings_init_nsigs2_dim2.npy  sample_scalings_updated_nsigs2_dim2.npy  signature_embeddings_init_nsigs1_dim1.npy  signature_embeddings_updated_nsigs2_dim2.npy  signature_scalings_updated_nsigs2_dim2.npy  signatures_mat_init_nsigs1_dim1.npy  signatures_mat_init_nsigs2_dim2.npy  signatures_mat_updated_nsigs2_dim2.npy
tests/test_data/models/klnmf/: H_init_nsigs1.npy  (+1 more)
tests/test_data/utils/: counts.csv  kl_divergence_nsigs1_result.npy  kl_divergence_nsigs2_result.npy  objective_input_nsigs1_W.npy  poisson_llh_nsigs2_result.npy  samplewise_kl_divergence_nsigs1_result.npy  samplewise_kl_divergence_nsigs2_result.npy
(+80 files in other folders)
