[tool.poetry]
name = "salamander-learn"
version = "0.3.0"
description = "Salamander is a non-negative matrix factorization framework for signature analysis"
license = "MIT"
authors = ["Benedikt Geiger"]
maintainers = [
    "Benedikt Geiger <benedikt_geiger@hms.harvard.edu>",
]
packages = [{ include = "salamander", from = "src" }]


readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastcluster = "^1.2.6"
matplotlib = "^3.7.1"
numba = "^0.57"
numpy = "^1.24.3"
pandas = "^1.5.3"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"
seaborn = "^0.13.0"
umap-learn = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
tox = "^4.11.3"

[tool.pytest.ini_options]
# /site-packages/umap/__init__.py:36: DeprecationWarning: pkg_resources is deprecated as an API.
filterwarnings = [
    "ignore::DeprecationWarning:umap.*:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
