[tool.poetry]
name = "salamander-learn"
version = "0.4.1"
description = "Salamander is a non-negative matrix factorization framework for signature analysis"
license = "MIT"
authors = ["Benedikt Geiger"]
maintainers = [
    "Benedikt Geiger <benedikt_geiger@hms.harvard.edu>",
]
packages = [{ include = "salamander", from = "src" }]


readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
adjustText = "^0.8"
anndata = "^0.10.5"
fastcluster = "^1.2.6"
matplotlib = "^3.7.1"
mudata = "^0.2.3"
numba = "^0.59"
numpy = "^1.24.3"
pandas = "^1.5.3"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"
seaborn = "^0.13.0"
umap-learn = "^0.5.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9"
pandas-stubs = "^2.2.1"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
tox = "^4.11.3"
types-seaborn = "^0.13.2"

[tool.pytest.ini_options]
# /site-packages/umap/__init__.py:36: DeprecationWarning: pkg_resources is deprecated as an API.
filterwarnings = [
    "ignore::DeprecationWarning:umap.*:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
